# nxt-lazarus

./: .gitignore  NXT Toolkit.spec  README.md  build_app.sh  icon.icns  pyproject.toml
.github/workflows/: release.yml
examples/: drive_square.nxt  hello.nxt  obstacle_avoid.nxt  valkyries.nxt
nxt_toolkit/: __init__.py  app.py  bytecode.py  compiler.py  dataspace.py  rxe_writer.py  usb.py
